# real_float

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  init.sh
external_include/: mb_core.h  mb_core_type.h
include/: mb_real_float.h
spec/: check.sh
src/: mb_real_float.c  mb_real_float_add.c  mb_real_float_assign.c  mb_real_float_clone.c  mb_real_float_delete.c  mb_real_float_free.c  mb_real_float_get.c  mb_real_float_internal.h  mb_real_float_is_greater_than_or_equal_to_four.c  mb_real_float_multiply.c  mb_real_float_negate.c  mb_real_float_new.c
